--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -24,9 +24,10 @@ jobs:
         with:
           node-version: "16"
           check-latest: true
-      - run: npm install
-      - run: npm run build
-      - run: npm run export
+      - run: npm install -g yarn
+      - run: yarn install
+      - run: yarn build
+      - run: yarn export
         env:
           CI: true
       - run: touch out/.nojekyll
